--- a/03-DOM&HandlingEvents/form.html
+++ b/03-DOM&HandlingEvents/form.html
@@ -9,15 +9,19 @@
 <body>
 	<h1>Filling in a form</h1>
 	<form>
-		<p>University:<br><input type="text"></p>
-		<p>Address:<br><input type="text"></p>
-		<button type="button">Hint</button>
+		<p>University:<br><input id="university" type="text"></p>
+		<p>Address:<br><input id="address" type="text"></p>
+		<button type="button" onclick="insertHints()">Hint</button>
 	</form>
 
 	<script>
-		// a JavaScript code here ...
 		var university = "Cracow University of Economics";
 		var address = "Rakowicka 27, Krakow, POLAND";
+
+		function insertHints() {
+			document.getElementById('university').value = university;
+			document.getElementById('address').value = address;
+		}
 
 	</script>
 </body>
