--- a/04-JSON&DataTransfer/student.html
+++ b/04-JSON&DataTransfer/student.html
@@ -7,10 +7,23 @@
 	<body>
 		<h1>Student</h1>
 		<p>Open a console and then click the button</p>
-		<input type="button" value="Display student's data">
+		<input type="button" onclick="showStudentData()" value="Display student's data">
 		<p id="personalData"></p>
 
 		<script>
+			function showStudentData() {
+				let personalDataFile = new XMLHttpRequest();
+				personalDataFile.open('GET', 'data.json');  //open with Live Server
+				personalDataFile.send();
+
+				personalDataFile.onreadystatechange = function () {
+					if (personalDataFile.readyState == 4 && personalDataFile.status == 200) {
+						let personalData = JSON.parse(personalDataFile.responseText);
+						document.getElementById('personalData').innerHTML = 
+							`Name: ${personalData.name} <br> Surname: ${personalData.surname}`
+					}
+				};
+			}
 
 		</script>
 
