--- a/06-VueDataBinding/book.html
+++ b/06-VueDataBinding/book.html
@@ -5,10 +5,10 @@
 </head>
 <body>
   <div id="app">
-    <span>Imię:</span>
-    <input type="text" v-model.lazy="name"> <br>
-    <span>Nazwisko:</span>
-    <input type="text" v-model.lazy="surname"> <br>
+    <span>Tytuł:</span>
+    <input type="text" v-model.lazy="title"> <br>
+    <span>Autor:</span>
+    <input type="text" v-model.lazy="author"> <br>
     
     <button v-on:click="save" value="Save">Zapisz</button>
   </div>
